--- a/smacofAV/smacofAV.qmd
+++ b/smacofAV/smacofAV.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Robust Least Squares Multidimensional Scaling"
+title: |
+    | Smacof at 50: A Manual
+    | Part x: smacofAV: Robust Smacof
 author: 
     - name: Jan de Leeuw
       orcid: 0000-0003-1420-1797
